# servicelog

./: .gitignore  .travis.yml  COPYING  ChangeLog  Makefile.am  README  bootstrap.sh  configure.ac  servicelog.spec.in
doc/: Makefile.am  servicelog.8  servicelog_manage.8  servicelog_notify.8
man/: log_repair_action.8
servicelog-ci/: Dockerfile-fedora-33  Dockerfile-fedora-rawhide  Dockerfile-ubuntu-20.04  build-fedora-33.sh
src/: Makefile.am  config.h.in  log_repair_action.c  platform.c  platform.h  servicelog.c  servicelog_notify.c  servicelog_switch.c  slog_common_event.c  v29_servicelog.c  v29_servicelog_manage.c
