# Copyright (C) 2008, IBM
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Library General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Library General Public License for more details.
#
# You should have received a copy of the GNU Library General Public
# Licence along with this program; if not, see <http://www.gnu.org/licenses/>. 

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src doc
EXTRA_DIST = bootstrap.sh doc/servicelog.8 doc/servicelog_notify.8 doc/log_repair_action.8 doc/servicelog_manage.8 doc/Makefile
